--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,12 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+#   <<: *default
+#   database: db/production.sqlite3
+  adapter: mysql2
+  encoding: utf8
+  database: management
+  port: 3306
+  username: crm01
+  password: crm
+  host: localhost
